# photoshop_mcp_server

./: .example.env  README.md  pyproject.toml  requirements.txt
photoshop_mcp_server2/: registry.py  server.py
photoshop_mcp_server2/ps_adapter/: action_manager.py  application.py
photoshop_mcp_server2/resources/: document_resources.py  registry.py
photoshop_mcp_server2/tools/: document_tools.py  layer_tools.py  session_tools.py
