[project]
name = "photoshop-mcp-server2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "loguru>=0.7.3",
    "mcp>=1.9.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "photoshop>=0.21.9",
    "pillow>=11.2.1",
    "pywin32>=310",
    "tenacity>=9.1.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "sam-2 @ git+https://github.com/IDEA-Research/Grounded-SAM-2.git",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "matplotlib>=3.10.3",
    "diffusers==0.30.2",
    "langchain-core>=0.3.65",
    "langchain-groq>=0.3.2",
    "dotenv>=0.9.9",
    "groq>=0.28.0",
    "huggingface-hub>=0.33.0",
    "gradio-client>=1.10.3",
    "fastmcp>=2.10.4",
]
[project.scripts]
photoshop-mcp-server2 = "photoshop_mcp_server2.server:main"
